with the final centering fixes on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -337,8 +337,7 @@ nav a {
   .home .content-pick {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-content: center;
+    align-items: center;
     width: 100%;
   }
 }
@@ -348,11 +347,7 @@ nav a {
 }
 @media (max-width: 500px) {
   .home .content-pick .destination {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
+    width: 80%;
   }
 }
 .home .content-pick .destination .btn {
@@ -368,5 +363,6 @@ nav a {
 @media (max-width: 500px) {
   .home .content-pick .destination .btn {
     background-color: #17A2B8;
+    width: 90%;
   }
 }
