--- a/less/home-page.less
+++ b/less/home-page.less
@@ -97,8 +97,7 @@
     @media @mobile {
       display: flex;
       flex-direction: column;
-      justify-content: center;
-      align-content: center;
+      align-items: center;
       width: 100%;
     }
 
@@ -107,11 +106,8 @@
       margin-bottom: 30px;
 
       @media @mobile {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-content: center;
+        width: 80%;
+
       }
 
     .btn {
@@ -126,6 +122,7 @@
 
       @media @mobile {
         background-color: @button-bg;
+        width: 90%;
       }
     }
 
